# snakebot

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  aws.txt  benchmark.js  binding.gyp  callgrind.out.2146  index.js  package-lock.json  package.json  readme.md  run_server.sh  snakelib.js  ubuntuinit.sh
ai/: graeme_test.js
algorithms/: defensive_hungry.js  dumb_dog.js  hungry.js  minority_report.js  terminator.js
napi/: astar.cpp  astar.hpp  index.cpp  interop.cpp  interop.hpp  movement.cpp  movement.hpp  simulator.cpp  simulator.hpp  snakelib.cpp  snakelib.hpp  testlib.cpp  testlib.hpp  timing.cpp  timing.hpp
napi/algorithms/: cautious.cpp  cautious.hpp  dog.cpp  dog.hpp  hungry.cpp  hungry.hpp  inyourface.cpp  inyourface.hpp  onedirection.cpp  onedirection.hpp  random.cpp  random.hpp  sim.cpp  sim.hpp  termiantor.cpp  terminator.hpp  test.cpp  test.hpp
napi/benchmark/: benchsuite.cpp  benchsuite.hpp
napi/test/: testsuite.cpp
nonode/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  server.cpp  testing.cpp
src/: algorithms.cpp  algorithms.hpp  astar.cpp  astar.hpp  bench.cpp  dispatcher.cpp  main.cpp  movement.cpp  movement.hpp  server.cpp  server.hpp  simulator.cpp  testing.hpp  tests.cpp  timing.hpp
src/algorithms/: cautious.cpp  cautious.hpp  dog.cpp  inyourface.cpp  inyourface.hpp  random.cpp  sim.cpp
src/benchmark/: benchsuite.cpp
src/test/: testsuite.cpp  testsuite.hpp
test/: test_helpers.js  test_movement.js  test_native.js  test_simulator.js
util/: astar.js  game_state.js  helpers.js  movement.js  simulator.js
